--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "recipe-calorie-converter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.8",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+	"name": "recipe-calorie-converter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"next": "10.0.8",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^2.0.3",
+		"zustand": "^3.3.3"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.34",
+		"@types/react": "^17.0.3",
+		"autoprefixer": "^10.2.5",
+		"postcss": "^8.2.8",
+		"tailwindcss": "^2.0.3",
+		"typescript": "^4.2.3"
+	}
 }
