--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"formik": "^2.2.6",
 		"next": "10.0.8",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^2.0.3",
+		"yup": "^0.32.9",
 		"zustand": "^3.3.3"
 	},
 	"devDependencies": {
