--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "17.0.1",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^2.0.3",
+		"uniqid": "^5.3.0",
 		"yup": "^0.32.9",
 		"zustand": "^3.3.3"
 	},
