--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@next/bundle-analyzer": "^10.1.3",
 		"@svgr/webpack": "^5.5.0",
 		"axios": "^0.21.1",
 		"firebase": "^8.3.2",
